--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async-validator": "1.11.5",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "vanilla-tilt": "^1.7.2",
     "vue": "^2.6.11",
     "vuepress": "^1.8.2",
     "vuepress-plugin-vue-demo": "^1.0.15"
