--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uennki-ui",
+  "name": "element-buff",
   "version": "1.0.1",
   "private": false,
   "description": "vue-cli plugin to add form component based on element ui framework secondary encapsulation, suitable for vue2.0 version 🍿",
